# telephone-record-management

./: CMakeLists.txt  P1-input-1.txt  P1-input-3.txt  P2-input-2.txt  P2-input-4.txt  README.md
include/: analysis.h  file_io.h  phone_record.h  trie.h
src/: analysis.c  file_io.c  main.c  trie.c
